fix(ENTESB-11647) - Preview section updates for improved usability - preview results empty state is now centered and uses full width - updated preview empty results text as recommended - changed preview results icon text as recommended - added label above preview results as recommended to tell user the number of result rows - added `min-height` to DdlEditor to prevent it from getting too small when query results exist

--- a/app/ui-react/packages/ui/src/Data/Virtualizations/ViewEditor/DdlEditor.css
+++ b/app/ui-react/packages/ui/src/Data/Virtualizations/ViewEditor/DdlEditor.css
@@ -1,6 +1,14 @@
+.ddl-editor {
+  min-height: 300px;
+}
+
 .ddl-editor__button {
   margin-bottom: 8px;
   margin-right: 4px;
+}
+
+.ddl-editor__card {
+  height: 100%;
 }
 
 .ddl-editor .text-editor {
